--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/Publishers.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/Publishers.razor
@@ -2,6 +2,13 @@
 @using Bookstore.Core.Dtos.Publishers;
 @using Bookstore.UI.ApiInterfaces;
 
+<style>
+    .button-right {
+        margin-right: auto;
+        margin-left: 20px;
+    }
+</style>
+
 @if (_isLoading)
 {
     <p><em>Loading...</em></p>
@@ -21,8 +28,17 @@ else
                 Class="mt-0"
                 OnKeyDown="FilterPublishers"
                 Immediate="true"
+            />
+            <MudButton
+                Variant="Variant.Outlined"
+                EndIcon="@Icons.Outlined.Add"
+                Color="Color.Info"
+                Size="Size.Medium"
+                Class="button-right"
+                OnClick="OpenAddDialog"
             >
-            </MudTextField>
+                <span class="button-text">Add</span>
+            </MudButton>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Nr</MudTh>
@@ -39,33 +55,4 @@ else
             <MudTd DataLabel="Name">@context.Name</MudTd>
         </RowTemplate>
     </MudTable>
-}
-
-@code {
-    [Inject]
-    private IPublishersApi _publishersApi { get; set; }
-
-    private IEnumerable<PublisherDto> _publishers = Enumerable.Empty<PublisherDto>();
-    private string _publishersNameFilter = string.Empty;
-    private bool _isLoading = true;
-
-    protected override async Task OnInitializedAsync()
-    {
-        _publishers = await _publishersApi.GetAllPublishers();
-        _isLoading = false;
-        StateHasChanged();
-    }
-
-    private async Task FilterPublishers(KeyboardEventArgs e)
-    {
-        if(e.Key == "Enter")
-        {
-            var filtered = await _publishersApi.GetFilteredPublishers(_publishersNameFilter);
-            _publishers = filtered ?? Enumerable.Empty<PublisherDto>();
-            _publishersNameFilter = string.Empty;
-            StateHasChanged();
-        }
-    }
-
-    private int? GetRowNumber(PublisherDto element) => _publishers?.TakeWhile(p => p != element).Count();
 }
