--- a/bookstore-ui/Bookstore.UI/wwwroot/css/app.css
+++ b/bookstore-ui/Bookstore.UI/wwwroot/css/app.css
@@ -99,3 +99,8 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.button-text {
+    margin-top: 2.5px;
+    margin-right: -2px;
+}
