--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/AddPublisher.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/AddPublisher.razor
@@ -1,16 +1,16 @@
-﻿@using Bookstore.Core.Dtos.Publishers;
-@using Bookstore.UI.Pages.Dialogs
+﻿@using Bookstore.UI.Pages.Dialogs
 @inherits DialogBasePage
 
 <MudDialog>
     <DialogContent>
-        <MudForm>
+        <MudForm Model="@_addPublisher" @ref="@_form" Validation="@(_validator.ValidateForm)" ValidationDelay="0" >
             <MudTextField
                 T="string"
                 Label="Name"
                 @bind-Value="_addPublisher.Name"
                 Variant="Variant.Outlined"
                 Immediate="true"
+                For="@(() => _addPublisher.Name)"
             />
         </MudForm>
     </DialogContent>
