--- a/bookstore-ui/Bookstore.UI/Pages/DialogBasePage.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/DialogBasePage.razor
@@ -1,4 +1,8 @@
-﻿@code {
+﻿@using Bookstore.UI.Common.Models;
+@using Refit;
+@using System.Text.Json;
+
+@code {
     [Inject]
     protected ISnackbar _snackbar { get; set; }
 
@@ -15,6 +19,25 @@
         {
             _mudDialog.Close(DialogResult.Ok(true));
         }
+    }
+
+    protected async Task SendRequest (Task httpRequest, string successMessage)
+    {
+        bool success;
+        var message = successMessage;
+
+        try
+        {
+            await httpRequest;
+            success = true;
+        }
+        catch (ApiException ex)
+        {
+            message = JsonSerializer.Deserialize<ErrorMessage>(ex.Content).Errors;
+            success = false;
+        }
+
+        AddSnackbarMessage(success, message);
     }
 
     protected void Cancel() => _mudDialog.Cancel();
