--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/DeletePublisher.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/DeletePublisher.razor
@@ -1,5 +1,4 @@
-﻿<h3>DeletePublisher</h3>
+﻿@using Bookstore.UI.Components.Dialogs
+@inherits DialogBasePage
 
-@code {
-
-}
+<DeleteDialog Entity="Publisher" OnCancel="Cancel" OnConfirmDelete="ConfirmDelete"/>
