--- a/bookstore-ui/Bookstore.UI/wwwroot/css/app.css
+++ b/bookstore-ui/Bookstore.UI/wwwroot/css/app.css
@@ -19,7 +19,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -103,4 +103,10 @@ a, .btn-link {
 .button-text {
     margin-top: 2.5px;
     margin-right: -2px;
+}
+
+@media screen and (max-width: 600px) {
+    .title {
+        display: none;
+    }
 }
