--- a/bookstore-ui/Bookstore.UI/Components/Dialogs/DeleteDialog.razor
+++ b/bookstore-ui/Bookstore.UI/Components/Dialogs/DeleteDialog.razor
@@ -1,7 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h6" Align="Align.Center">
-            <MudIcon Class="mr-3 mb-n1"/>
             Delete @Entity
         </MudText>
     </TitleContent>
@@ -12,7 +11,7 @@
     </DialogContent>
     <DialogActions>
         <MudButton Color="Color.Default" Variant="Variant.Filled" OnClick="@Cancel">Cancel</MudButton>
-        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="@OpenDeleteDialog">Delete</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="@OnDelete">Delete</MudButton>
     </DialogActions>
 </MudDialog>
 
@@ -27,8 +26,8 @@
     public EventCallback<bool> OnCancel { get; set; }
 
     [Parameter] 
-    public EventCallback<bool> OnOpenDeleteDialog { get; set; }
+    public EventCallback<bool> OnConfirmDelete { get; set; }
 
     private async Task Cancel() => await OnCancel.InvokeAsync();
-    private async Task OpenDeleteDialog() => await OnOpenDeleteDialog.InvokeAsync();
+    private async Task OnDelete() => await OnConfirmDelete.InvokeAsync();
 }
