--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/DeletePublisher.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/DeletePublisher.razor
@@ -1,4 +1,4 @@
 ﻿@using Bookstore.UI.Components.Dialogs
 @inherits DialogBasePage
 
-<DeleteDialog Entity="Publisher" OnCancel="Cancel" OnConfirmDelete="ConfirmDelete"/>
+<DeleteDialog EntityName="Publisher" OnCancel="Cancel" OnConfirm="ConfirmDelete" />
