--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/UpdatePublisher.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/UpdatePublisher.razor
@@ -14,4 +14,4 @@
         </MudForm>
     </DialogContent>
 </MudDialog>
-<UpdateDialog EntityName="Publisher" OnSubmit="@(async () => await Submit())" OnCancel="Cancel"/>
+<UpdateDialog EntityName="Publisher" OnConfirm="@(async () => await Submit())" OnCancel="Cancel" />
