--- a/bookstore-ui/Bookstore.UI/Components/Dialogs/DeleteDialog.razor
+++ b/bookstore-ui/Bookstore.UI/Components/Dialogs/DeleteDialog.razor
@@ -1,33 +1,18 @@
-﻿<MudDialog>
+﻿@inherits BaseDialog
+
+<MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h6" Align="Align.Center">
-            Delete @Entity
+            Delete @EntityName
         </MudText>
     </TitleContent>
     <DialogContent>
         <MudText Typo="Typo.body1">
-            Are you sure you want to delete this @Entity? <br> This process cannot be undone.
+            Are you sure you want to delete this @EntityName? <br> This process cannot be undone.
         </MudText>
     </DialogContent>
     <DialogActions>
         <MudButton Color="Color.Default" Variant="Variant.Filled" OnClick="@Cancel">Cancel</MudButton>
-        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="@OnDelete">Delete</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="@Confirm">Delete</MudButton>
     </DialogActions>
 </MudDialog>
-
-@code {
-    [CascadingParameter] 
-    private MudDialogInstance MudDialog { get; set; }
-
-    [Parameter] 
-    public string Entity { get; set; } = string.Empty;
-
-    [Parameter] 
-    public EventCallback<bool> OnCancel { get; set; }
-
-    [Parameter] 
-    public EventCallback<bool> OnConfirmDelete { get; set; }
-
-    private async Task Cancel() => await OnCancel.InvokeAsync();
-    private async Task OnDelete() => await OnConfirmDelete.InvokeAsync();
-}
