--- a/bookstore-ui/Bookstore.UI/Components/Dialogs/UpdateDialog.razor
+++ b/bookstore-ui/Bookstore.UI/Components/Dialogs/UpdateDialog.razor
@@ -1,9 +1,4 @@
-﻿<style>
-    .button-left {
-        margin-right: auto;
-        margin-left: 1%;
-    }
-</style>
+﻿@inherits BaseDialog
 
 <MudDialog>
     <TitleContent>
@@ -13,24 +8,6 @@
      </TitleContent>
      <DialogActions>
         <MudButton Color="Color.Default" Variant="Variant.Filled" OnClick="@Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Info" Variant="Variant.Filled" OnClick="@Submit">Save</MudButton>
+        <MudButton Color="Color.Info" Variant="Variant.Filled" OnClick="@Confirm">Save</MudButton>
     </DialogActions>
 </MudDialog>  
-
-@code {
-    [CascadingParameter] 
-    private MudDialogInstance MudDialog { get; set; }
-
-    [Parameter] 
-    public string EntityName { get; set; } = string.Empty;
-
-    [Parameter] 
-    public EventCallback<bool> OnSubmit{ get; set; }
-
-    [Parameter] 
-    public EventCallback<bool> OnCancel { get; set; }
-
-    private async Task Submit() => await OnSubmit.InvokeAsync();
-
-    private async Task Cancel() => await OnCancel.InvokeAsync();
-}
