Add update book page, fix books repository

--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/AddPublisher.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/AddPublisher.razor
@@ -10,8 +10,7 @@
                 @bind-Value="_addPublisher.Name"
                 Variant="Variant.Outlined"
                 Immediate="true"
-                For="@(() => _addPublisher.Name)"
-            />
+                For="@(() => _addPublisher.Name)" />
         </MudForm>
     </DialogContent>
 </MudDialog>
