--- a/bookstore-ui/Bookstore.UI/Pages/Publishers/Publishers.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Publishers/Publishers.razor
@@ -7,6 +7,17 @@
         margin-right: auto;
         margin-left: 20px;
     }
+
+
+    .filters-div {
+        display: flex;
+        align-items: flex-end;
+        flex-direction: row;
+        gap: 2%;
+        justify-content: space-around;
+        width: 100%;
+        margin-bottom: 25px;
+    }
 </style>
 
 @if (_isLoading)
@@ -17,28 +28,29 @@ else
 {
     <MudTable Items="@_publishers" Hover="true" Bordered="false" Dense="false" Breakpoint="Breakpoint.Xs">
         <ToolBarContent>
-            <MudText Typo="Typo.h6" Class="title">Publishers</MudText>
-            <MudSpacer />
-            <MudTextField 
-                @bind-Value="_publishersNameFilter" 
-                Placeholder="Search name..."
-                Adornment="Adornment.Start" 
-                AdornmentIcon="@Icons.Material.Filled.Search" 
-                IconSize="Size.Small" 
-                Class="mt-0"
-                OnKeyDown="FilterPublishers"
-                Immediate="true"
-            />
-            <MudButton
-                Variant="Variant.Outlined"
-                EndIcon="@Icons.Outlined.Add"
-                Color="Color.Info"
-                Size="Size.Medium"
-                Class="align-right"
-                OnClick="OpenAddDialog"
-            >
-                <span class="button-text">Add</span>
-            </MudButton>
+            <div class="filters-div">
+                <MudText Typo="Typo.h6" Class="title">Publishers</MudText>
+                <MudTextField 
+                    @bind-Value="_publishersNameFilter" 
+                    Placeholder="Search name..."
+                    Adornment="Adornment.Start" 
+                    AdornmentIcon="@Icons.Material.Filled.Search" 
+                    IconSize="Size.Small" 
+                    Class="mt-0"
+                    OnKeyDown="FilterPublishers"
+                    Immediate="true"
+                />
+                <MudButton
+                    Variant="Variant.Outlined"
+                    EndIcon="@Icons.Outlined.Add"
+                    Color="Color.Info"
+                    Size="Size.Medium"
+                    Class="align-right"
+                    OnClick="OpenAddDialog"
+                >
+                    <span class="button-text">Add</span>
+                </MudButton>
+            </div>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Nr</MudTh>
