--- a/bookstore-ui/Bookstore.UI/Pages/Books/Books.razor
+++ b/bookstore-ui/Bookstore.UI/Pages/Books/Books.razor
@@ -14,6 +14,7 @@
         gap: 2%;
         justify-content: space-around;
         width: 100%;
+        margin-top: 20px;
         margin-bottom: 25px;
     }
 </style>
@@ -28,7 +29,7 @@ else
         <ToolBarContent>
             <div class="filters-div">
                 <MudText Typo="Typo.h6" Class="title">Books</MudText>
-                <MudDateRangePicker Label="Books publish date" />
+                <MudDateRangePicker Label="Publish date" @bind-DateRange="@_dateRange" />
                 <MudTextField @bind-Value="_booksTitleFilter"
                           Placeholder="Search books..."
                           Adornment="Adornment.Start"
@@ -54,16 +55,18 @@ else
             <MudTh>Publisher</MudTh>
             <MudTh>Genre</MudTh>
             <MudTh>Reception</MudTh>
+            <MudTh>Publish date</MudTh>
             <MudTh>Edit</MudTh>
             <MudTh>Delete</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd>@GetRowNumber(context)</MudTd>
+            <MudTd>@(GetRowNumber(context) + 1)</MudTd>
             <MudTd DataLabel="Title">@context.Title</MudTd>
             <MudTd DataLabel="Author">@context.Author</MudTd>
             <MudTd DataLabel="Publisher">@context.Publisher.Name</MudTd>
             <MudTd DataLabel="Genre">@context.Genre</MudTd>
             <MudTd DataLabel="Reception">@context.Reception.ToString()</MudTd>
+            <MudTd DataLabel="PublishDate">@context.PublishDate.ToShortDateString()</MudTd>
             <MudTd DataLabel="Edit">
                 <MudIconButton Icon="@Icons.Material.Outlined.Edit"
                            Variant="Variant.Text"
